# oh-my-gift-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: actions.yml
docs/c4/: components.md  containers.md  context.md
docs/db/: er-diagram.md
src/: birthdays.db  config.py  logging_config.py  main.py  mainbot.py
src/database/: database.py
src/handlers/: handlers.py
src/services/: api_services.py  reminder_services.py
