[project]
name = "oh-my-gift-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Тюменцев Егор",email = "estiumentsev@edu.hse.ru"},
    {name = "Шатунова Светлана",email = "sashatunova@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "telebot (>=0.0.5,<0.0.6)",
    "requests (>=2.32.3,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" }
]

[virtualenvs]
in-project = true

[tool.poetry.scripts]
start = "src.main:start"

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv"
]
extend-ignore = [
    "E203"
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py312"]
line-length = 100
include = '\.pyi?$'
